--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <html>
+  <head>
+    <title>Qucik Draw</title>
+    <script src="main.js"></script>
+  </head>
+  <body>
+    <canvas id="canvas"></canvas>
+    <div>
+      <input id="time" placeholder="seconds">
+    </div>
+    <div id="clock">
+      
+    </div>
+  </body>
+</html>
