--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Qucik Draw</title>
     <script src="main.js"></script>
   </head>
-  <body>
+  <body onload="setup()">
     <canvas id="canvas"></canvas>
     <div>
       <input id="time" placeholder="seconds">
