--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
   </head>
   <body onload="setup()">
     <canvas id="canvas"></canvas>
-    <div>
-      <input id="time" placeholder="seconds">
-    </div>
-    <div id="clock">
-      
-    </div>
+    <button style="width:100%;background-color:#00ff00;" onclick="">Submit</button>
   </body>
 </html>
