--- a/index.html
+++ b/index.html
@@ -10,6 +10,39 @@
   </head>
   <body onload="setup();al();">
     <canvas id="canvas"></canvas>
+    <select id="backColor">
+      <option value="#FFFFFF">White</option>
+      <option value="#000000">Blank</option>
+      <option value="#FF0000">Red</option>
+      <option value="#00FF00">Green</option>
+      <option value="#0000FF">Blue</option>
+    </select>
+    <select id="strokeColor">
+      <option value="#FFFFFF">White</option>
+      <option value="#000000">Blank</option>
+      <option value="#FF0000">Red</option>
+      <option value="#00FF00">Green</option>
+      <option value="#0000FF">Blue</option>
+    </select>
+    <select id="strokeSize">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
+      <option value="11">11</option>
+      <option value="12">12</option>
+    </select>
+    <select id="mode">
+      <option value="draw">Draw</option>
+      <option value="erase">Erase</option>
+    </select>
+    <br />
     <button style="width:100%;background-color:#00ff00;" onclick="">Submit</button>
   </body>
 </html>
