--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <option value="draw">Draw</option>
       <option value="erase">Erase</option>
     </select>
+    <button onclick="ctx.fillStyle=settings.backgroundColor;ctx.fillRect(0,0,c.width,c.height);">Clear</clear>
     <br />
     <button style="width:100%;background-color:#00ff00;" onclick="">Submit</button>
   </body>
